# rag-scripts

./: README.md  main.py  pyproject.toml
src/docx_text/: README.md  cli.py
src/dupfinder/: README.md  cli.py
src/rag_build/: README.md  cli.py  pipeline.py
src/ragchat/: README.md  app.py  cli.py
src/textproc/: README.md  cli.py  pipeline.py
src/textract_ocr/: README.md  aws.py  cli.py  pipeline.py
src/textsplit/: README.md  cli.py  legal_chunker.py  legal_cli.py  merge_cli.py
src/vectordb/: README.md  __init__.py  cli.py  embedding.py  ingest.py  manager.py  search.py
src/word_links/: README.md  cli.py  core.py  impl.py
